traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:17: error: not found: value y
  y=6
  ^TraversalDiagonal:18: error: not found: value y
  setPos(a,y)
           ^